[fix] 워크로드 실시간 예측 수정